# bat-code

./: CLAUDE.md
libs/batman-cli/: README.md  pyproject.toml
libs/batman-cli/batman_code/: __init__.py  __main__.py  agent.py  app.py  app.tcss  clipboard.py  config.py  file_ops.py  input.py  local_context.py  main.py  model_config.py  non_interactive.py  project_utils.py  sessions.py  subagents.py  system_prompt.md  tools.py  ui.py
libs/batman-cli/batman_code/integrations/: __init__.py  daytona.py  langsmith.py  modal.py  runloop.py  sandbox_factory.py  sandbox_provider.py
libs/batman-cli/batman_code/prompts/: __init__.py  alfred.md  batman.md  joker.md  nightwing.md  oracle.md
libs/batman-cli/batman_code/skills/: __init__.py  commands.py  load.py
libs/batman-cli/batman_code/widgets/: __init__.py  batcave.py  portrait.py
libs/batman-cli/tools/: ascii_portrait_gotham.html  img2ascii.py
tasks/: deferred-imports.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  todo.md
tools/: analyze_portrait.py  lum_map.py
