[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batman-cli"
version = "0.1.0"
description = "Batman-themed AI coding assistant TUI powered by deepagents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["batman", "ai", "cli", "terminal", "tui", "agents"]

dependencies = [
    "textual>=6.0.0,<8.0.0",
    "rich>=14.0.0,<15.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
bat-code = "batman_code:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["batman_code"]

[tool.uv.sources]
deepagents = { path = "../deepagents", editable = true }
